...
                    SettingsView(settingsViewModel)
                } label: {
                    Image(systemName: "person.circle")
                        .font(.system(size: 24, weight: .semibold))
                }
                .accessibilityLabel("Personalization Settings")
                .accessibilityIdentifier("personalizationSettings")
            }
        }
    }
}

#Preview {
...
