...
            }

            Section(viewModel.customizeSectionText) {
                appearanceControls

                manuallyPurchasePremiumButton
                    .accessibilityIdentifier("purchaseButton")
            }
            .onChange(of: feedbackIntensity) { value in
                hapticEngine.asyncPlayHaptic(
                    intensity: feedbackIntensity,
                    sharpness: feedbackSharpness
                )
...
